Fix slider issue to show up on mobile, add YEA brand colors

--- a/yea/css/templatemo_style.css
+++ b/yea/css/templatemo_style.css
@@ -19,11 +19,11 @@ body {
 }
 
 .blue {
-	color: #06C;
+  color: #06C;
 }
 
 .green {
-	color: #090;
+  color: #090;
 }
 
 ol,
@@ -165,7 +165,7 @@ body {
 }
 
 a {
-  color: #ec523f;
+  color: #E21836;
   text-decoration: none;
   -webkit-transition: all 200ms ease-in-out;
   -moz-transition: all 200ms ease-in-out;
@@ -244,8 +244,8 @@ hr {
 .site-header ul.social-icons li a {
   width: 36px;
   height: 36px;
-  background-color: white;
-  color: #444444;
+  background-color: #E21836;
+  color: #fff;
   text-align: center;
   line-height: 36px;
   border-radius: 18px;
@@ -292,7 +292,7 @@ hr {
   padding-left: 130px;
   line-height: 100px;
   text-transform: uppercase;
-  color: #ec523f;
+  color: #E21836;
   font-size: 32px;
   font-weight: 700;
 }
@@ -312,8 +312,8 @@ hr {
   padding-top: 37px;
 }
 .main-menu ul li.active a {
-  border-top: 3px solid #ec523f;
-  color: #ec523f;
+  border-top: 3px solid #E21836;
+  color: #E21836;
 }
 
 a.toggle-menu {
@@ -344,7 +344,7 @@ a.toggle-menu {
   font-size: 14px;
 }
 .menu-responsive ul li.active a {
-  color: #ec523f;
+  color: #E21836;
 }
 
 .flexslider {
@@ -387,11 +387,36 @@ a.toggle-menu {
 }
 .flexslider .slider-caption a.slider-btn {
   color: white;
-  background-color: #ec523f;
+  background-color: #E21836;
   padding: 12px 20px;
   border-radius: 4px;
   text-transform: uppercase;
   font-weight: 700;
+}
+@media screen and (min-width: 350px){
+  .slider-caption h2{
+    margin-top:30px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .flexslider .slider-caption {
+    top: 0px;
+  }
+  .slider-caption h2{
+
+    font-size:18px!important;
+  }
+  .slider-caption p{
+    font-size:12px!important;
+  }
+}
+@media screen and (min-width: 768px) {
+  .flexslider .slider-caption {
+    top: 130px;
+  }
+  .slider-caption h2{
+    margin-top:0px;
+  }
 }
 @media screen and (min-width: 989px) {
   .flexslider .slider-caption {
@@ -401,6 +426,13 @@ a.toggle-menu {
 @media screen and (min-width: 1200px) {
   .flexslider .slider-caption {
     top: 380px;
+  }
+}
+
+
+@media screen and (max-width: 989px){
+  .flexslider{
+    margin-top:194px;
   }
 }
 
@@ -450,11 +482,11 @@ a.toggle-menu {
 }
 
 .service-item a {
-	color: #ffff66;
+  color: #ffff66;
 }
 
 .service-item a:hover {
-	color: black;
+  color: black;
 }
 
 .service-item .service-icon {
@@ -522,7 +554,7 @@ a.toggle-menu {
   width: 100%;
 }
 .portfolio-item .portfolio-thumb .portfolio-overlay {
-  background-color: #ec523f;
+  background-color: #E21836;
   position: absolute;
   width: 100%;
   height: 100%;
@@ -588,7 +620,7 @@ a.toggle-menu {
   text-align: center;
   top: 0;
   left: 0;
-  background-color: #ec523f;
+  background-color: #E21836;
   color: white;
   opacity: 0;
   visibility: hidden;
@@ -623,7 +655,7 @@ a.toggle-menu {
   height: 36px;
   background-color: white;
   line-height: 40px;
-  color: #ec523f;
+  color: #E21836;
   border-radius: 18px;
   -webkit-border-radius: 18px;
   -moz-border-radius: 18px;
@@ -661,7 +693,7 @@ a.toggle-menu {
   padding-left: 15px;
   text-transform: uppercase;
   font-weight: 700;
-  background-color: #ec523f;
+  background-color: #E21836;
   box-shadow: none;
 }
 
@@ -691,13 +723,13 @@ a.toggle-menu {
 .contact-form .mainBtn {
   margin-top: 15px;
   color: white;
-  background-color: #ec523f;
+  background-color: #E21836;
   text-transform: uppercase;
   border: 0;
 }
 
 #go-top {
-  background-color: #ec523f;
+  background-color: #E21836;
   color: white;
   padding: 15px 40px;
   text-transform: uppercase;
@@ -710,7 +742,7 @@ a.toggle-menu {
 
 /*
 body, p, div, h1, h2, h3, h4, h5, h6 {
-	font-family: "Open Sans", Arial, Verdana, Geneva, sans-serif;
-   	font-style: normal;
+  font-family: "Open Sans", Arial, Verdana, Geneva, sans-serif;
+    font-style: normal;
 }
 */
